k8s/report-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  namespace: lissa-fit
  labels:
    app: report-service
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: report-service
  template:
    metadata:
      labels:
        app: report-service
        version: v1
      annotations:
        prometheus.io/port: "8086"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: report-service
          image: mihailovpasha/report-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
              name: http
              protocol: TCP

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
