k8s/report-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: lissa-fit
  labels:
    app: report-service
spec:
  type: ClusterIP
  selector:
    app: report-service
  ports:
    - port: 80
      targetPort: 8086
      name: http
      protocol: TCP
  sessionAffinity: None
