k8s/report-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-service-ingress
  namespace: lissa-fit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: lissa-fit.report-service.com
      http:
        paths:
          - path: /v1/mvc/report(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: report-service
                port:
                  number: 80
          - path: /v1/rest/report(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: report-service
                port:
                  number: 80
